fixing images getting too wide

--- a/web/book-list.css
+++ b/web/book-list.css
@@ -6,6 +6,7 @@
     height:200px;
     text-align: center;
     vertical-align: bottom;
+    max-width: 200px;
 }
 .image-block > p {
     width: 100%;
